Changes between 1.0.x and 'trunk'
=====================================

* consolidate and cleanup py/code classes and files 

* cleanup py/misc, move tests to bin-for-dist 

* introduce delattr/delitem/delenv methods to py.test's monkeypatch funcarg 

* consolidate py.log implementation, remove old approach. 

* introduce py.io.TextIO and py.io.BytesIO for distinguishing between
  text/unicode and byte-streams (uses underlying standard lib io.* 
  if available) 

* make py.unittest_convert helper script available which converts "unittest.py" 
  style files into the simpler assert/direct-test-classes py.test/nosetests
  style.  The script was written by Laura Creighton. 
 
* simplified internal localpath implementation 

Changes between 1.0.1 and 1.0.2
=====================================

* fixing packaging issues, triggered by fedora redhat packaging, 
  also added doc, examples and contrib dirs to the tarball. 

* added a documentation link to the new django plugin. 

Changes between 1.0.0 and 1.0.1
=====================================

* added a 'pytest_nose' plugin which handles nose.SkipTest, 
  nose-style function/method/generator setup/teardown and 
  tries to report functions correctly. 

* capturing of unicode writes or encoded strings to sys.stdout/err 
  work better, also terminalwriting was adapted and somewhat 
  unified between windows and linux. 

* improved documentation layout and content a lot

* added a "--help-config" option to show conftest.py / ENV-var names for
  all longopt cmdline options, and some special conftest.py variables. 
  renamed 'conf_capture' conftest setting to 'option_capture' accordingly. 

* fix issue #27: better reporting on non-collectable items given on commandline 
  (e.g. pyc files)

* fix issue #33: added --version flag (thanks Benjamin Peterson) 

* fix issue #32: adding support for "incomplete" paths to wcpath.status()

* "Test" prefixed classes are *not* collected by default anymore if they 