@@ -1,7 +1,7 @@
 import py
 
 pydir = py.path.local(py.__file__).dirpath()
-mydatadir = py.magic.autopath().dirpath().join("data")
+mydatadir = py.path.local(__file__).dirpath('data')
 
 def getdata():
     rel = mydatadir.relto(pydir)
